# notex

./: index.html  package-lock.json  package.json
.github/workflows/: deploy-docs.yml
docs/: github-pages.md  index.md
docs/.vitepress/: config.mts
docs/notex/: V0.1.md  V0.2.md  V0.3.md  V0.4.md  V0.5.md  V0.6.md  V0.7.md  V0.8.md  V0.9.md  V1.0.md  V1.1.md  V1.2.md  V1.3.md  index.md
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
